fix(core): Record the parent description of the first context as well